<resources>
    <string name="app_name">EcoHarvest</string>
    <string name="dashboard">Dashboard</string>
    <string name="add_sales">Tambah Penjualan</string>
    <string name="profile">Profile</string>
    <string name="fab">fab</string>
    <string name="add_photo">add photo</string>
    <string name="type">Jenis Limbah</string>
    <string name="description">Deskripsi</string>
    <string name="type_harvest">Jenis limbah</string>
    <string name="price">Harga</string>
    <string name="rp_10000">Rp. 10000</string>
    <string name="description_your_harvest">Deskripsikan limbah yang mau kamu jual</string>
    <string name="Location">Lokasi</string>
    <string name="location_picker">Location Picker</string>
    <string name="upload">Upload</string>
    <string name="Choose_your_option">Pilih Opsi berikut</string>
    <string name="Gallery">Galeri</string>
    <string name="Camera">Kamera</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="email">E-mail</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="don_t_you_have_account">Don\'t you have account?</string>
    <string name="home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="event_terdekat">Event terdekat</string>
    <string name="banner">banner</string>
    <string name="see_all">Lihat Semua</string>
    <string name="tips_popular">Tips Populer</string>
    <string name="on_trending">On Trending</string>
    <string name="eco_tips">Eco Tips</string>
    <string name="eco_collaboration">EcoCollabs</string>
    <string name="eco_mart">EcoMart</string>
    <string name="vegetagood">Vegetagood</string>
    <string name="desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad adipisci aut consequuntur cum dolores eius eos expedita fugiat illo molestiae, natus nisi numquam obcaecati odio officiis quidem quis rem velit.</string>
    <string name="click_to_upload"> <u>click to upload</u></string>
    <string name="unggah_hingga_10_gambar">Unggah hingga 10 gambar</string>
    <string name="category">Kategori</string>
    <string name="jerami">Jerami</string>
    <string name="fruit">Buah</string>
    <string name="sayur">Sayur</string>
    <string name="tambahkan_lainnya">+Tambahkan lainnya</string>
    <string name="product_name">Nama Produk</string>
    <string name="location">Lokasi</string>
    <string name="unggah">Unggah</string>
    <string name="more_desc">Dapat digunakan untuk bahan pakan ternak</string>
    <string name="i_accept_the_terms_of_use">I accept the terms of use.</string>
    <string name="you_can_also">You can also</string>
    <string name="login_with_google">Login with Google</string>
    <string name="i_don_t_have_an_account"><u>I don’t have an account</u></string>
</resources>