<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".UploadProductActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/gray"
                android:orientation="horizontal">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/dotted">


                    <ImageView
                        android:id="@+id/imageView21"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.367"
                        app:srcCompat="@drawable/uploader" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/click_to_upload"
                        android:textColor="@color/yellow"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/imageView21" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/unggah_hingga_10_gambar"
                    android:textColor="@color/yellow" />
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:background="@color/gray">

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/textView19"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/product_name"
                        android:textColor="@color/yellow" />

                    <EditText
                        android:id="@+id/editTextText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:backgroundTint="@color/yellow"
                        android:ems="10"
                        android:inputType="text"
                        android:maxLines="1"
                        android:text="Jerami"
                        android:textColor="@color/yellow" />

                    <TextView
                        android:id="@+id/textView20"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:text="Deskripsi"
                        android:textColor="@color/yellow" />

                    <EditText
                        android:id="@+id/editTextText3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:backgroundTint="@color/yellow"
                        android:ems="10"
                        android:inputType="text"
                        android:text="Dapat digunakan untuk bahan pakan ternak"
                        android:textColor="@color/yellow" />

                    <TextView
                        android:id="@+id/textView21"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:text="Jumlah"
                        android:textColor="@color/yellow" />

                    <EditText
                        android:id="@+id/editTextText4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:backgroundTint="@color/yellow"
                        android:ems="10"
                        android:inputType="number"
                        android:maxLines="1"
                        android:text="12"
                        android:textColor="@color/yellow" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/category"
                        android:textColor="@color/yellow" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="16dp"

                    android:layout_marginBottom="16dp"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                    <Button
                        android:id="@+id/button"
                        android:layout_width="wrap_content"
                        android:layout_height="35dp"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/button"
                        android:text="@string/jerami"
                        android:textAllCaps="false"
                        android:textSize="13sp"
                        tools:ignore="SmallSp" />

                    <Button
                        android:id="@+id/button2"
                        android:layout_width="wrap_content"
                        android:layout_height="35dp"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/button"
                        android:text="@string/fruit"
                        android:textAllCaps="false"
                        android:textSize="10sp"
                        tools:ignore="SmallSp" />

                    <Button
                        android:id="@+id/button3"
                        android:layout_width="wrap_content"
                        android:layout_height="35dp"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/button"
                        android:text="@string/sayur"
                        android:textAllCaps="false"
                        android:textSize="10sp" />

                    <Button
                        android:id="@+id/button4"
                        android:layout_width="wrap_content"
                        android:layout_height="35dp"

                        android:layout_weight="1"
                        android:background="@drawable/button"
                        android:text="@string/tambahkan_lainnya"
                        android:textAllCaps="false"
                        android:textSize="7sp"
                        tools:ignore="SmallSp" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/gray"
                android:layout_marginTop="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/location"
                        android:layout_marginTop="16dp"
                        android:layout_marginStart="56dp"
                        android:textSize="16sp"
                        android:textColor="@color/yellow"
                        />

                    <ImageView
                        android:id="@+id/imageView25"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/maps"
                        android:layout_gravity="center"
                        android:layout_marginTop="16dp"
                        android:layout_marginStart="16dp"/>

                    <Button
                        android:id="@+id/button6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button"
                        android:text="@string/unggah" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>